--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -40,6 +40,9 @@
     font-size: 18px;
     color: #757575;
 }
+.text-center{
+    text-align: center;
+}
 
 /* header */
 .header{
@@ -104,6 +107,10 @@ main{
     max-width: 1140px;
     margin: 0 auto;
 }
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
 
 /* about styles */
 
@@ -121,4 +128,14 @@ main{
 .about-items{
     display: flex;
     justify-content: space-around;
+}
+/* skills section styles */
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+.skill{
+    padding: 30px;
+    border-radius: 5px;
+    box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
